--- a/src/classical/Cargo.toml
+++ b/src/classical/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+if_chain = "1.0.2"
 num-traits = "0.2.14"
